Trying to fix the borders problem of images on IE.

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 
 img {
   border:0;
+  margin:0;
 }
 
 .header {
